--- a/src/tutorial/src/step-10/App/template.html
+++ b/src/tutorial/src/step-10/App/template.html
@@ -1,4 +1,4 @@
 <p>Id de la tarea: {{ todoId }}</p>
-<button @click="todoId++">Obtener siguiente tarea</button>
+<button @click="todoId++">Recuperar la próxima tarea</button>
 <p v-if="!todoData">Cargando...</p>
 <pre v-else>{{ todoData }}</pre>
