--- a/src/tutorial/src/step-8/App/template.html
+++ b/src/tutorial/src/step-8/App/template.html
@@ -4,11 +4,11 @@
 </form>
 <ul>
   <li v-for="todo in todos" :key="todo.id">
-    <input type="checkbox" v-model="todo.done">
+    <input type="checkbox" v-model="todo.done" />
     <span :class="{ done: todo.done }">{{ todo.text }}</span>
     <button @click="removeTodo(todo)">X</button>
   </li>
 </ul>
 <button @click="hideCompleted = !hideCompleted">
-  {{ hideCompleted ? 'Mostrar todo' : 'Ocultar las completadas' }}
+  {{ hideCompleted ? 'Mostrar todo' : 'Ocultar completada' }}
 </button>
