--- a/src/examples/src/todomvc/App/template.html
+++ b/src/examples/src/todomvc/App/template.html
@@ -1,10 +1,10 @@
 <section class="todoapp">
   <header class="header">
-    <h1>todos</h1>
+    <h1>tareas</h1>
     <input
       class="new-todo"
       autofocus
-      placeholder="What needs to be done?"
+      placeholder="¿Qué hay que hacer?"
       @keyup.enter="addTodo"
     />
   </header>
@@ -16,7 +16,7 @@
       :checked="remaining === 0"
       @change="toggleAll"
     />
-    <label for="toggle-all">Mark all as complete</label>
+    <label for="toggle-all">Marcar todo como completado</label>
     <ul class="todo-list">
       <li
         v-for="todo in filteredTodos"
@@ -45,22 +45,26 @@
   <footer class="footer" v-show="todos.length">
     <span class="todo-count">
       <strong>{{ remaining }}</strong>
-      <span>{{ remaining === 1 ? 'item' : 'items' }} left</span>
+      <span
+        >{{ remaining === 1 ? 'item restante' : 'items restantes' }}</span
+      >
     </span>
     <ul class="filters">
       <li>
-        <a href="#/all" :class="{ selected: visibility === 'all' }">All</a>
+        <a href="#/all" :class="{ selected: visibility === 'all' }"
+          >Todas</a
+        >
       </li>
       <li>
         <a href="#/active" :class="{ selected: visibility === 'active' }"
-          >Active</a
+          >Activas</a
         >
       </li>
       <li>
         <a
           href="#/completed"
           :class="{ selected: visibility === 'completed' }"
-          >Completed</a
+          >Completadas</a
         >
       </li>
     </ul>
@@ -69,7 +73,7 @@
       @click="removeCompleted"
       v-show="todos.length > remaining"
     >
-      Clear completed
+      Limpiar completadas
     </button>
   </footer>
 </section>
